tests/bonsai/error/f42.bonsai
func use_option(i : f42) -> void {}
