tests/bonsai/error/f42.expect
---CODE---
1
---STDERR---
[internal] Error: src/Parser/Parser.cpp:60
tests/bonsai/error/f42.bonsai:1:21: [parse error] unsupported floating point type: f42

func use_option(i : f42) -> void {}
                    ^^^
